up: buttons to -> ordenacaoNome + ordenacaoIdade

--- a/2.1-ordenacaojs/searchtabela.html
+++ b/2.1-ordenacaojs/searchtabela.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ordenação em tabela</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Ordenação e algoritmo em tabela</h1>
-      <h4>Pesquisa e ordenação por nome em HTML.</h4>
-    </header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ordenação em tabela</title>
+  <link rel="stylesheet" href="./styles/styles.css" />
+</head>
+
+<body>
+  <header>
+    <h1>Ordenação e algoritmo em tabela</h1>
+    <h4>Pesquisa e ordenação por nome em HTML.</h4>
+  </header>
+  <main>
+    <div class="metodos-ordenacao">
+      <input type="text" id="busca" onkeyup="buscarTabela()" placeholder="Buscar por nome" />
+
+      <button id="ordena-nome" onclick="ordenarPorNome()">
+        Ordenar por nome
+      </button>
+
+      <button id="ordena-nome" onclick="ordenarPorIdade()">
+        Ordenar por idade
+      </button>
+    </div>
     <div class="tabela-container">
       <table id="tabela">
         <thead>
@@ -19,67 +33,74 @@
             <th>Idade</th>
           </tr>
         </thead>
-
-        <tbody id="tablebody"></tbody>
+  
+        <tbody id="tablebody" rows="5" column="50"></tbody>
       </table>
-
-      <button id="ordena-nome" onclick="ordenarTabela()">
-        Ordenar por nome
-      </button>
-
-      <input
-        type="text"
-        id="busca"
-        onkeyup="buscarTabela()"
-        placeholder="Buscar por nome"
-      />
     </div>
-    <script>
-      let pessoas = [
-        { nome: "Carlos", idade: 30 },
-        { nome: "Ana", idade: 25 },
-        { nome: "Bruno", idade: 28 },
-        { nome: "Ana", idade: 22 },
-        { nome: "João", idade: 18 },
-      ];
-      function criarTabela(dados) {
-        const bodyTable = document.getElementById("tablebody");
 
-        dados.forEach((item) => {
-          const linha = document.createElement("tr");
-          Object.values(item).forEach((valor) => {
-            const td = document.createElement("td");
-            td.textContent = valor;
-            linha.appendChild(td);
-          });
-          bodyTable.appendChild(linha);
+    <div class="pagination">
+      
+    </div>
+  </main>
+  <script>
+    let pessoas = [
+      { nome: "Carlos", idade: 30 },
+      { nome: "Ana", idade: 25 },
+      { nome: "Bruno", idade: 28 },
+      { nome: "Ricardo", idade: 22 },
+      { nome: "João", idade: 18 },
+      { nome: "Ana", idade: 27 },
+      { nome: "Joãozinho", idade: 15 }
+    ];
+    let limit = 5;
+    let bodyTable = document.getElementById("tablebody");
+
+    function criarTabela(dados) {
+      const bodyTable = document.getElementById("tablebody");
+
+      dados.forEach((item) => {
+        const linha = document.createElement("tr");
+        Object.values(item).forEach((valor) => {
+          const td = document.createElement("td");
+          td.textContent = valor;
+          linha.appendChild(td);
         });
-      }
+        bodyTable.appendChild(linha);
+      });
+    }
 
-      criarTabela(pessoas);
+    criarTabela(pessoas);
 
-      function ordenarTabela() {
-        let bodyTable = document.getElementById("tablebody");
-        Array.from(bodyTable.rows)
-          .sort((a, b) =>
-            a.cells[0].textContent.localeCompare(b.cells[0].textContent)
-          )
-          .forEach((tr) => bodyTable.appendChild(tr));
-      }
+    function ordenarPorNome() {
+      Array.from(bodyTable.rows)
+        .sort((a, b) =>
+          a.cells[0].textContent.localeCompare(b.cells[0].textContent)
+        )
+        .forEach((tr) => bodyTable.appendChild(tr));
+    }
 
-      function buscarTabela() {
-        let filtro = document.getElementById("busca").value.toUpperCase(); //Pega o valor maiúsculo aqui também pra funcionar a busca independente do input
-        let tabela = document.getElementById("tablebody");
+    function ordenarPorIdade() {
+      Array.from(bodyTable.rows)
+        .sort((a, b) =>
+          a.cells[1].textContent.localeCompare(b.cells[1].textContent)
+        )
+        .forEach((tr) => bodyTable.appendChild(tr));
+    }
 
-        //Aqui to transformando as linhas da tabela em array e iterando elas
-        Array.from(tabela.rows).forEach((row) => {
-          row.style.display = row.cells[0].textContent
-            .toUpperCase() // Isso aqui é pra deixar insensível, já que funciona a busca pra todas as palavras como maiúsculas
-            .includes(filtro)
-            ? ""
-            : "none";
-        });
-      }
-    </script>
-  </body>
+    function buscarTabela() {
+      let filtro = document.getElementById("busca").value.toUpperCase(); //Pega o valor maiúsculo aqui também pra funcionar a busca independente do input
+      let tabela = document.getElementById("tablebody");
+
+      //Aqui to transformando as linhas da tabela em array e iterando elas
+      Array.from(tabela.rows).forEach((row) => {
+        row.style.display = row.cells[0].textContent
+          .toUpperCase() // Isso aqui é pra deixar insensível, já que funciona a busca pra todas as palavras como maiúsculas
+          .includes(filtro)
+          ? ""
+          : "none";
+      });
+    }
+  </script>
+</body>
+
 </html>
